@@ -47,6 +47,7 @@ Changelog
  * Fix: List-based fields within form builder form submissions are now displayed as comma-separated strings rather than as Python lists (Christine Ho, Matt Westcott)
  * Fix: Ensure that page editor forms are submitted as multipart when file fields exist in InlinePanels (Wietze Helmantel)
  * Fix: The page type usage listing now have a translatable page title (Ramon de Jezus)
+ * Fix: Styles for submission filtering form now have a consistent height. (Thijs Kramer)
 
 
 1.9 (16.02.2017)
